[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/buyKnives.gd" type="Script" id=1]
[ext_resource path="res://sprites/feuille1.png" type="Texture" id=2]
[ext_resource path="res://sprites/knives/New Piskel-1.png.png" type="Texture" id=3]
[ext_resource path="res://sprites/knives/New Piskel-1.png (2).png" type="Texture" id=4]

[sub_resource type="Animation" id=6]
resource_name = "skin0Pressed"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("skin0:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.294118, 0.215686, 0.215686, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "skin1Pressed"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("skin1:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.294118, 0.215686, 0.215686, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="buyKnives" type="Node2D"]
script = ExtResource( 1 )

[node name="animation" type="AnimationPlayer" parent="."]
anims/skin0Pressed = SubResource( 6 )
anims/skin1Pressed = SubResource( 5 )

[node name="skin1" type="Button" parent="."]
margin_left = 34.6059
margin_top = 90.6299
margin_right = 558.606
margin_bottom = 631.63
rect_scale = Vector2( 0.08, 0.08 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 2 )
flat = true

[node name="Sprite" type="Sprite" parent="skin1"]
position = Vector2( 330.579, 287.77 )
rotation = -0.380482
scale = Vector2( 0.605208, 0.605208 )
z_index = 2
texture = ExtResource( 3 )

[node name="skin0" type="Button" parent="."]
margin_left = 3.29521
margin_top = 91.278
margin_right = 527.295
margin_bottom = 632.278
rect_scale = Vector2( 0.08, 0.08 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 2 )
flat = true
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="skin0"]
position = Vector2( 265.936, 275.563 )
rotation = -0.383237
scale = Vector2( 0.168638, 0.168638 )
z_index = 2
texture = ExtResource( 4 )
[connection signal="pressed" from="skin1" to="." method="_on_skin1_pressed"]
[connection signal="pressed" from="skin0" to="." method="_on_skin0_pressed"]
